; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_drm_gem.c_exynos_drm_gem_prime_get_sg_table.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_drm_gem.c_exynos_drm_gem_prime_get_sg_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sg_table = type { i32 }
%struct.drm_gem_object = type { i32 }
%struct.exynos_drm_gem = type { i32, i32 }

@PAGE_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sg_table* @exynos_drm_gem_prime_get_sg_table(%struct.drm_gem_object* %0) #0 {
  %2 = alloca %struct.drm_gem_object*, align 8
  %3 = alloca %struct.exynos_drm_gem*, align 8
  %4 = alloca i32, align 4
  store %struct.drm_gem_object* %0, %struct.drm_gem_object** %2, align 8
  %5 = load %struct.drm_gem_object*, %struct.drm_gem_object** %2, align 8
  %6 = call %struct.exynos_drm_gem* @to_exynos_gem(%struct.drm_gem_object* %5)
  store %struct.exynos_drm_gem* %6, %struct.exynos_drm_gem** %3, align 8
  %7 = load %struct.exynos_drm_gem*, %struct.exynos_drm_gem** %3, align 8
  %8 = getelementptr inbounds %struct.exynos_drm_gem, %struct.exynos_drm_gem* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @PAGE_SHIFT, align 4
  %11 = ashr i32 %9, %10
  store i32 %11, i32* %4, align 4
  %12 = load %struct.exynos_drm_gem*, %struct.exynos_drm_gem** %3, align 8
  %13 = getelementptr inbounds %struct.exynos_drm_gem, %struct.exynos_drm_gem* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call %struct.sg_table* @drm_prime_pages_to_sg(i32 %14, i32 %15)
  ret %struct.sg_table* %16
}

declare dso_local %struct.exynos_drm_gem* @to_exynos_gem(%struct.drm_gem_object*) #1

declare dso_local %struct.sg_table* @drm_prime_pages_to_sg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
